kubernetes/monitoring/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout:    "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout:    "1800"
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.khazadlab.es
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.khazadlab.es
      secretName: tls-grafana-khazadlab
